--- a/.github/workflows/dispath.yml
+++ b/.github/workflows/dispath.yml
@@ -43,7 +43,7 @@ jobs:
           context: ./
           file: ${{ inputs.dockerfile }}
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: |
             jiamiao442/fastdfs-nginx:${{ inputs.tag }}
 
